--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,17 @@
         ]
       }
     ],
-    "react/jsx-props-no-spreading": "off"
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
+    ],
+    "react/jsx-props-no-spreading": "off",
+    "import/prefer-default-export": "off"
   }
 }
