--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/rubik": "^4.5.0",
+    "framer-motion": "^5.5.6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
