--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,23 @@
       }
     ],
     "react/jsx-props-no-spreading": "off",
-    "import/prefer-default-export": "off"
+    "react/require-default-props": "off",
+    "import/prefer-default-export": "off",
+    "jsx-a11y/anchor-is-valid": [
+      "error",
+      {
+        "components": [
+          "Link"
+        ],
+        "specialLink": [
+          "hrefLeft",
+          "hrefRight"
+        ],
+        "aspects": [
+          "invalidHref",
+          "preferButton"
+        ]
+      }
+    ]
   }
 }
