--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
       }
     ],
     "react/jsx-props-no-spreading": "off",
+    "react/jsx-no-bind": "off",
     "react/require-default-props": "off",
     "import/prefer-default-export": "off",
     "jsx-a11y/anchor-is-valid": [
