--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/rubik": "^4.5.0",
+    "axios": "^0.24.0",
     "framer-motion": "^5.5.6",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-query": "^3.34.7"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
