--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.24.0",
     "framer-motion": "^5.5.6",
     "next": "12.0.7",
+    "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
