--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.6.0",
     "@fontsource/rubik": "^4.5.0",
     "axios": "^0.24.0",
+    "date-fns": "^2.28.0",
     "framer-motion": "^5.5.6",
+    "gray-matter": "^4.0.3",
     "next": "12.0.7",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
