:sparkles: Finish translation implementation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-intl": "^5.24.3",
     "react-markdown": "^7.1.2",
     "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1"
