--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "framer-motion": "^5.5.6",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
+    "next-mdx-remote": "^3.0.8",
     "next-seo": "^4.28.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-intl": "^5.24.3",
-    "react-markdown": "^7.1.2",
-    "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1"
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
