--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-intl": "^5.24.3",
+    "react-syntax-highlighter": "^15.4.5",
     "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
     "@types/react": "17.0.38",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "eslint": "8.6.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "12.0.7",
