--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fontsource/rubik": "^4.5.0",
+    "contentful": "^9.1.10",
     "date-fns": "^2.28.0",
     "framer-motion": "^5.5.6",
     "gray-matter": "^4.0.3",
