:sparkles: config shadcn and next-themes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,7 @@
 	"plugins": ["simple-import-sort"],
 	"rules": {
 		"simple-import-sort/imports": "warn",
-		"simple-import-sort/exports": "warn"
+		"simple-import-sort/exports": "warn",
+		"no-unused-vars": "warn"
 	}
 }
