:sparkles: home page

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,3 @@
 {
-	"*.{ts,tsx}": ["yarn prettier --write .", "yarn eslint --max-warnings 0 ."]
+	"*.{ts,tsx}": ["yarn eslint --max-warnings 0 ."]
 }
