--- a/sanity/package.json
+++ b/sanity/package.json
@@ -16,11 +16,13 @@
   ],
   "dependencies": {
     "@sanity/color-input": "^3.1.0",
+    "@sanity/document-internationalization": "^2.0.3",
     "@sanity/vision": "^3.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "sanity": "^3.29.1",
+    "sanity-plugin-internationalized-array": "^1.10.8",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
