--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-menubar": "^1.0.4",
 		"@radix-ui/react-slot": "^1.0.2",
+		"@sanity/image-url": "^1.0.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"lucide-react": "^0.321.0",
 		"next": "14.1.0",
 		"next-intl": "^3.7.0",
+		"next-sanity": "^8.0.0",
 		"next-themes": "^0.2.1",
 		"react": "^18",
 		"react-dom": "^18",
