--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@portabletext/react": "^3.0.11",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-menubar": "^1.0.4",
@@ -29,6 +30,7 @@
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.10",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
