--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"react-dom": "^18",
 		"react-type-animation": "^3.2.0",
 		"tailwind-merge": "^2.2.1",
-		"tailwindcss-animate": "^1.0.7"
+		"tailwindcss-animate": "^1.0.7",
+		"use-breakpoint": "^4.0.1"
 	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.10",
