--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
 		"lucide-react": "^0.321.0",
-		"next": "14.1.0",
+		"next": "14.2.25",
 		"next-intl": "^3.7.0",
 		"next-sanity": "^8.0.0",
 		"next-themes": "^0.2.1",
@@ -47,5 +47,6 @@
 		"prettier": "^3.2.4",
 		"tailwindcss": "^3.3.0",
 		"typescript": "^5"
-	}
+	},
+	"packageManager": "pnpm@9.14.4+sha512.c8180b3fbe4e4bca02c94234717896b5529740a6cbadf19fa78254270403ea2f27d4e1d46a08a0f56c89b63dc8ebfd3ee53326da720273794e6200fcf0d184ab"
 }
