feat: add basic sections to the main page

--- a/lefthook.yml
+++ b/lefthook.yml
@@ -17,7 +17,7 @@ pre-push:
   parallel: true
   jobs:
     - name: type-check
-      run: pnpm tsc --noEmit
+      run: pnpm tsc --noEmit --skipLibCheck
 
     - name: build
       run: pnpm build
