--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"prepare": "lefthook install"
 	},
 	"dependencies": {
+		"@radix-ui/react-collapsible": "^1.1.12",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-toggle": "^1.1.10",
 		"@radix-ui/react-toggle-group": "^1.1.11",
@@ -26,11 +28,13 @@
 		"next-themes": "^0.4.6",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-markdown": "^10.1.0",
 		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
